[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/ui/SettingsIconPressed.png" type="Texture" id=1]
[ext_resource path="res://sprites/ui/SettingsIconHover.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/SettingsIcon.png" type="Texture" id=3]
[ext_resource path="res://src/ui/SettingsButton.gd" type="Script" id=4]

[node name="SettingsButton" type="TextureButton"]
margin_left = 167.0
margin_right = 176.0
margin_bottom = 9.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
stretch_mode = 3
script = ExtResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SettingsButton_pressed"]
